--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 </head>
 <body>
-  <header style="display:flex;align-items:center;justify-content:flex-start;max-width:1200px;margin:0 auto;width:100%;padding:1rem 2rem 0rem 2rem;background:var(--navy);position:relative;">
-    <img src="assets/Logo-transparent.png" alt="Smart Systems Logo" style="height:252px;width:auto;display:block;margin-right:3rem;" />
-    <nav style="margin:0 auto;display:flex;align-items:center;justify-content:center;height:252px;gap:2.5rem;position:relative;z-index:1;">
-      <div style="display:flex;align-items:center;justify-content:center;gap:2.5rem;height:100%;margin:0;padding:0;">
-        <a href="#hero">Home</a>
-        <a href="#about">About</a>
-        <a href="#offerings">Offerings</a>
-        <a href="#process">Process</a>
-        <a href="#contact">Contact</a>
-      </div>
+  <header>
+    <img src="assets/Logo-transparent.png" alt="Smart Systems Logo" class="logo" />
+    <nav>
+      <a href="#hero">Home</a>
+      <a href="#about">About</a>
+      <a href="#offerings">Offerings</a>
+      <a href="#process">Process</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <section class="hero" id="hero">
     <div class="hero-content" data-aos="fade-up">
       <h1>AI-Powered Workflow Design for SMBs</h1>
-      <p>Turn spreadsheet chaos into seamless, low-code automations. <br> For owners who want ops to just work.</p>
+      <p>For owners who want ops to just work.</p>
       <a href="#contact" class="cta-btn">Book Discovery Call</a>
     </div>
   </section>
@@ -40,7 +38,7 @@
         <div class="about-punch">10+ years transforming factories & field teams. Now: AI, low-code, and IoT for SMBs who want Tier-1 results.</div>
         <div class="about-metrics">
           <span class="badge">10+ yrs ops</span>
-          <span class="badge">7x $MM lean deployments</span>
+          <span class="badge">$7M lean deployments</span>
           <span class="badge">Ex-GE & Kearney</span>
         </div>
       </div>
