--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 </head>
 <body>
+  <div id="splash-screen">
+    <img src="assets/Logo-transparent.png" alt="Smart Systems Logo" id="splash-logo">
+  </div>
   <header>
-    <img src="assets/Logo-transparent.png" alt="Smart Systems Logo" class="logo" />
+    <img src="assets/Logo-transparent.png" alt="Smart Systems Logo" class="logo" id="header-logo" />
     <nav>
       <a href="#hero">Home</a>
       <a href="#about">About</a>
